Carrito funcional - Agregar/Quitar

--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,10 @@ body {
     height: 100%;
 }
 
+.logoFull:hover {
+    cursor: pointer;
+}
+
 .userCart {
     height: 100%;
     width: 30%;
@@ -63,18 +67,24 @@ body {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    width: 100%;
+    width: 80%;
 }
 
 .card {
-    width: 20vw;
     border: none;
-    transition-property: width;
+    border-radius: 7px;
+    transition-property: box-shadow;
     transition-duration: 0.3s;
+    transition-timing-function: ease-out;
 }
 
 .card:hover {
-    width: 22vw;
+    box-shadow: 0px 0px 20px white;
+}
+
+.card img {
+    border-top-left-radius: 6px;
+    border-top-right-radius: 6px;
 }
 
 .card-body {
@@ -85,11 +95,9 @@ body {
     text-align: center;
 }
 
-@media (max-width: 992px) {
-    .card {
-        width: 80vw;
-    }
+@media (max-width: 767px) {
     .card:hover {
-        width: 80vw;
+        width: 100%;
     }
 }
+
