--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ body {
 }
 
 .card:hover {
-    box-shadow: 0px 0px 20px white;
+    box-shadow: 0px 0px 40px white;
 }
 
 .card img {
@@ -90,6 +90,11 @@ body {
     justify-content: space-between;
     align-items: center;
     text-align: center;
+}
+
+.inputQuantity {
+    text-align: center;
+
 }
 
 @media (max-width: 767px) {
