--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,22 @@
+@font-face {
+    font-family: saiyan;
+    src: url(./font/Saiyan-Sans.ttf);
+}
+
 * {
    margin: 0px;
    padding: 0px; 
 }
 
 body {
-    background-color: rgb(40, 40, 40);
+    background: rgb(40,40,40);
+    background: linear-gradient(90deg, rgb(15,15,15) 0%, rgba(80,80,80,1) 50%, rgba(15,15,15,1) 100%);
 }
 
 .navbarP {
+    position: fixed;
+    top: 0px;
+    z-index: 10;
     width: 100%;
     height: 10vh;
     min-height: 100px;
@@ -17,11 +26,13 @@ body {
     border-bottom: 2px solid azure;
 }
 
-.container-fluid {
+
+.navbarP .container-fluid {
     height: 100%;
     min-height: 100px;
-    justify-content: space-around !important;
+    justify-content: space-around;
 }
+
 
 .logoFull {
     display: inline-block;
@@ -58,6 +69,10 @@ body {
     font-weight: bold;
     font-size: 2rem;
     margin-bottom: 0px;
+}
+
+.main {
+    margin-top: 20vh;
 }
 
 .cardsContainer {
@@ -97,12 +112,47 @@ body {
 }
 
 .info {
+    padding: 5vw;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 30px;
+    border: 2px solid white;
+    border-radius: 20px;
     text-align: center;
 }
 
-@media (max-width: 767px) {
-    .card:hover {
-        width: 100%;
+@media (min-width: 768px) AND (max-width: 1206px) {
+    .card {
+        width: 40%;
+    }
+
+    .main {
+        margin-top: 25vh;
     }
 }
 
+@media (max-width: 767px) {
+
+    .card {
+        width: 60%;
+    }
+
+    .navbarP {
+        height: 20vh;
+    }
+
+    .main {
+        margin-top: 30vh;
+    }
+
+    .container-fluid {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .logoFull ,
+    .userCart ,
+    .searchClass{
+        height: 20%;
+    }
+}
