--- a/css/style.css
+++ b/css/style.css
@@ -63,11 +63,26 @@ body {
     cursor: pointer;
 }
 
+.easterEggClass {
+    background-color: black;
+    border: 2px solid white;
+    color: white;
+    width: 30px;
+    border-radius: 50px;
+}
+
 .userCart p {
     color: white;
     font-weight: bold;
     font-size: 2rem;
     margin-bottom: 0px;
+}
+
+.searchClass,
+.btnPayClass {
+    border-radius: 7px;
+    padding: 5px;
+    font-size: large;
 }
 
 .main {
@@ -118,6 +133,132 @@ body {
     border-radius: 20px;
     text-align: center;
     background-color: rgba(0, 0, 0, 0.7);
+}
+
+.payContainer {
+    width: 70vw;
+    height: 20vh;
+    background-color:rgb(230, 230, 230);
+    border-radius: 10px;
+    border: 5px solid black;
+    box-shadow: 0px 0px 30px white;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.payContainer button {
+    height: 40%;
+    width: 40%;
+    border: 2px solid rgb(0, 191, 255);
+    border-radius: 10px;
+    background-color:lightskyblue;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    transition-property: height;
+    transition-duration: 0.15s;
+    transition-timing-function: ease;
+}
+
+.payContainer button:hover {
+    height: 45%;
+}
+
+.payContainerCard,
+.payContainerBank {
+    width: 70vw;
+    height: 70vh;
+    background-color:rgb(230, 230, 230);
+    border-radius: 10px;
+    border: 5px solid black;
+    box-shadow: 0px 0px 30px white;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.payContainerBank {
+    overflow-y: scroll;
+    height: 75vh;
+}
+
+.payContainerBank .infoBank {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+}
+
+.payContainerBank p {
+    width: 90%;
+    text-align: center;
+    font-size: 14px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+.payContainerCard form {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.payContainerCard form input, 
+.payContainerCard form .creditCardMonth,
+.payContainerCard form .creditCardYear{
+    margin: 20px 0px;
+    padding: 10px 0px;
+}
+
+.payContainerCard form .nameForm,
+.payContainerCard form .creditCardNum,
+.payContainerCard form div {
+    width: 100%;
+}
+
+
+.payContainerCard form .creditCardMonth,
+.payContainerCard form .creditCardYear,
+.payContainerCard form .creditCardCode {
+    width: 30%;
+}
+
+.payContainerCard form div {
+    display: flex;
+    justify-content: space-between;
+}
+
+.paymentReceipt {
+    background-color:azure;
+    height: 80%;
+    width: 45%;
+    border: 2px solid rgb(132, 132, 109);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow-y: scroll;
+}
+
+.paymentReceipt p {
+    width: 100%;
+    line-height: 2rem;
+    text-align: center;
+    margin: auto;
+    font-size: 0.8rem;
+}
+
+.paymentPrice {
+    font-size: 1.5rem !important;
+    font-weight: bold;
+}
+
+.paymentReceipt img {
+    width: 50%;
+    margin: auto;
+}
+
+.backBtn {
+    width: 80px;
+    height: 40px;
 }
 
 @media (min-width: 768px) AND (max-width: 1206px) {
