--- a/css/style.css
+++ b/css/style.css
@@ -307,6 +307,10 @@ body {
         margin-top: 30vh;
     }
 
+    .paymentReceipt {
+        width: 90%;
+    }
+
 }
 
 @media (max-width: 1000px) {
@@ -340,5 +344,6 @@ body {
     .paymentReceipt {
         min-height: 70vh;
         margin-bottom: 5vh;
+        width: 80%;
     }
 }
